# graveyardB

./: .editorconfig  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUTURE_WORK.md  Makefile  README.md  build.rs  docker-compose.yml
.github/workflows/: ci.yml
data/rocksdb/: 000008.sst  IDENTITY  LOG  LOG.old.1768854964526068  MANIFEST-000010
docs/: ARCHITECTURE.md  README.md  SCOPE.md
infra/charts/graveyard-db/: Chart.yaml  values.yaml
infra/docker/: docker-compose.dev.yml
infra/terraform/: main.tf  variables.tf
proto/api/: eventstore.proto
sdks/: SDK_SPEC.md
sdks/go/: .golangci.yml  Makefile  README.md  eventstore.pb.go  eventstore_grpc.pb.go  go.mod
sdks/go/client/: client.go  config.go
sdks/go/example/: main.go
sdks/go/proto/: eventstore.pb.go  eventstore_grpc.pb.go
sdks/go/schema/: generator.go  generator_test.go
sdks/java/: README.md  pom.xml
sdks/typescript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  config.ts
sdks/typescript/test/: client.test.ts
src/: lib.rs  main.rs
src/cluster/: client.rs  mod.rs
src/config/: settings.rs
src/domain/: event.rs  event_store.rs  mod.rs
src/domain/events/: convert.rs  event.rs  event_kind.rs  mod.rs  tests.rs
src/domain/schema/: convert.rs  mod.rs  model.rs  validation.rs  validation_tests.rs
src/domain/schemas/: mod.rs  schema.rs  (+2 more)
src/grpc/: auth.rs  mod.rs
src/infra/: mod.rs
src/pipeline/: command.rs  mod.rs  worker.rs
src/storage/: event_store.rs  hybrid.rs  memory.rs  mod.rs  snapshot.rs
(+25 files in other folders)
