[package]
name = "graveyar_db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }
scylla = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.19", features = ["v7", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"

